[package]
name = "ia_content_creator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1.42.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.22.1"
whisper-rs = "0.13.2"
hound = "3.5"
